v.0.36 Update Order functionality